Feb 21 Early deployment

--- a/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.css
+++ b/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.css
@@ -6,11 +6,31 @@
     margin-bottom: 20px;
     font-family: "SalesforceSans-Regular";
 }*/
+.childparent {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+	
+}
+
+.childimage {
+    width: 30%;
+	padding-left : 10px;
+	border-right: 1px black;
+}
+
+.childtext {
+    width: 70%;
+	padding-bottom: 0px;
+    padding-left : 0px;
+}
+
 .homeCard {
     background-color: white !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(226, 162, 237, 0.2), 0 6px 20px 0 rgba(216, 170, 238, 0.19);
     margin-top: 20px; /* increased from 10px */
     margin-bottom: 30px; /* increased from 20px */
+	/*font-family: 'sans-serif';*/
 }
 
 .text-helpicon-container {
@@ -22,23 +42,4 @@
 }
 .help-icon {
   margin-left: 8px;
-}
-.firstBox{
-    border-bottom: 2px solid rgb(229 229 229);
-    overflow: auto;
-    height: 200px;
-}
-.secondBox{
-    text-align: center;
-    cursor: pointer;
-    color:DodgerBlue;   
-}
-.iconContainer{
-   
-    display:inline-block;
-    cursor :pointer;
-}
-.fontsize{
-
-  font-size: 40px;
 }
