--- a/force-app/main/default/lwc/assignmentTile/assignmentTile.css
+++ b/force-app/main/default/lwc/assignmentTile/assignmentTile.css
@@ -1,9 +1,9 @@
 .homeCard {
     background-color: white !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(226, 162, 237, 0.2), 0 6px 20px 0 rgba(216, 170, 238, 0.19);
     margin-top: 20px; /* increased from 10px */
     margin-bottom: 30px; /* increased from 20px */
-   
+	/*font-family: 'sans-serif';*/
 }
     .header {
         background-color: white;
