--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory/eMS_LM_LeaveHistory.css
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory/eMS_LM_LeaveHistory.css
@@ -1,7 +1,65 @@
-.wrapping-cell{
-    word-wrap: break-word;
-  }
- .textBody{
-    font-size: 0.8rem;
-	font-family: "SalesforceSans-Regular";
- }
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  width: 95%;
+}
+
+.table-container {
+  max-height: 150px; /* set maximum height */
+  overflow: auto; /* enable vertical scrollbar */
+}
+
+.table-container::-webkit-scrollbar {
+  width: 6px;
+}
+
+.table-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.table-container::-webkit-scrollbar-thumb {
+  /*background: #888;*/
+  background : rgb(223, 185, 235);
+  border-radius: 4px;
+}
+
+.table-container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+th, td {
+  border: 1px solid #ddd;
+}
+
+th {
+  background-color: #f2f2f2;
+  text-align: left;
+  padding: 8px;
+  font-weight: bold;
+}
+
+tr {
+  border-bottom: 1px solid #ddd;
+}
+
+td {
+  text-align: left;
+  padding: 8px;
+}
+
+
+tr:hover {
+  background-color: #cbb1d7;
+}
+
+tr.selected {
+  background-color: #e1f5fe;
+}
+
+tr:focus {
+  outline: none;
+}
