--- a/force-app/main/default/lwc/timeSheetTile/timeSheetTile.css
+++ b/force-app/main/default/lwc/timeSheetTile/timeSheetTile.css
@@ -1,25 +1,3 @@
-.homeCard{
-    background-color: rgb(247 246 246) !important;
-    //box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	box-shadow: 0 4px 8px 0 #CBC3E3, 0 6px 20px 0 #CBC3E3;
-    margin-top: 10px;
-    margin-bottom: 20px;
-}
-.firstBox{
-    border-bottom: 3.5px solid rgb(229 229 229);
-}
-.secondBox{
-    border-bottom: 2px solid rgb(229 229 229);
-}
-.thirdBox{
-    
-    border-bottom: 2px solid rgb(229 229 229);
-}
-.fourthBox{
-    overflow: auto;
-    height: 200px;
-}
-
 .progress-circle {
   width: 200px;
   height: 200px;
@@ -38,4 +16,100 @@
 .child2 {
     width: 40%;
 	padding-bottom: 10px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  margin-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  width: 95%;
+}
+
+.table-container {
+  max-height: 150px; /* set maximum height */
+  overflow: auto; /* enable vertical scrollbar */
+}
+
+.table-container::-webkit-scrollbar {
+  width: 6px;
+}
+
+.table-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.table-container::-webkit-scrollbar-thumb {
+  /*background: #888;*/
+  background : rgb(223, 185, 235);
+  border-radius: 4px;
+}
+
+.table-container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+th, td {
+  border: 1px solid #ddd;
+}
+
+.childparent {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+	padding: 5px;
+}
+
+.childimage {
+    width: 30%;
+	padding:10px;
+	border-right: 1px black;
+}
+
+.childtext {
+    width: 70%;
+	padding-bottom: 10px;
+    padding-left : 3px;
+}
+
+.homeCard {
+    background-color: white !important;
+    box-shadow: 0 4px 8px 0 rgba(226, 162, 237, 0.2), 0 6px 20px 0 rgba(216, 170, 238, 0.19);
+    margin-top: 20px; /* increased from 10px */
+    margin-bottom: 30px; /* increased from 20px */
+	/*font-family: 'sans-serif';*/
+}
+
+th {
+  background-color: #f2f2f2;
+  text-align: left;
+  padding: 8px;
+  font-weight: bold;
+}
+
+tr {
+  border-bottom: 1px solid #ddd;
+}
+
+td {
+  text-align: left;
+  padding: 8px;
+}
+
+td:first-child {
+  font-weight: bold;
+}
+
+tr:hover {
+  background-color: #cbb1d7;
+}
+
+tr.selected {
+  background-color: #e1f5fe;
+}
+
+tr:focus {
+  outline: none;
 }
