--- a/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.css
+++ b/force-app/main/default/lwc/upcomingHolidayTile/upcomingHolidayTile.css
@@ -35,6 +35,25 @@ th, td {
   border: 1px solid #ddd;
 }
 
+.childparent {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+	padding: 5px;
+}
+
+.childimage {
+    width: 30%;
+	padding:10px;
+	border-right: 1px black;
+}
+
+.childtext {
+    width: 70%;
+	padding-bottom: 10px;
+    padding-left : 3px;
+}
+
 .homeCard {
     background-color: white !important;
     box-shadow: 0 4px 8px 0 rgba(226, 162, 237, 0.2), 0 6px 20px 0 rgba(216, 170, 238, 0.19);
@@ -64,7 +83,7 @@ td:first-child {
 }
 
 tr:hover {
-  background-color: #f5f5f5;
+  background-color: #cbb1d7;
 }
 
 tr.selected {
