--- a/force-app/main/default/aura/assignMultipleAssignMents/assignMultipleAssignMents.cmp
+++ b/force-app/main/default/aura/assignMultipleAssignMents/assignMultipleAssignMents.cmp
@@ -2,5 +2,15 @@
  <!-- <div class="slds-box">
      <lightning:button variant="brand" label="Call LWC Function" onclick="{! c.handleClick }" />  
    </div>  -->
-   <c:assignMutipleResources aura:id="assignMutipleResources"></c:assignMutipleResources>  
+    
+    <aura:html tag="style">
+        .slds-modal__container{
+        max-width: 70rem !important;
+        width:70% !important;
+        }
+    </aura:html>
+    
+    <div class="slds-m-around--xx-large">
+   <c:assignMutipleResources aura:id="assignMutipleResources"></c:assignMutipleResources> 
+    </div>
 </aura:component>
