--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.css
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.css
@@ -15,3 +15,52 @@
 .changeIconColorCancel{
     --lwc-colorTextIconDefault: #e20606;
 }
+
+.table-container {
+  max-height: calc(6 * 40px + 40px);
+  overflow-y: scroll; /* enable vertical scrollbar */
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+thead {
+  background-color: #f2f2f2;
+  position: sticky;
+  top: 0;
+  z-index: 1; /* set z-index to keep the header on top */
+}
+
+th {
+  text-align: left;
+  padding: 8px;
+  font-weight: bold;
+  border: 1px solid #ddd;
+}
+
+tbody {
+  border: 1px solid #ddd;
+}
+
+tr {
+  border-bottom: 1px solid #ddd;
+}
+
+td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:hover {
+  background-color: #cbb1d7;
+}
+
+tr.selected {
+  background-color: #e1f5fe;
+}
+
+tr:focus {
+  outline: none;
+}
