--- a/force-app/main/default/lwc/timeSheetTile/timeSheetTile.css
+++ b/force-app/main/default/lwc/timeSheetTile/timeSheetTile.css
@@ -79,7 +79,7 @@ th, td {
     box-shadow: 0 4px 8px 0 rgba(226, 162, 237, 0.2), 0 6px 20px 0 rgba(216, 170, 238, 0.19);
     margin-top: 20px; /* increased from 10px */
     margin-bottom: 30px; /* increased from 20px */
-	/*font-family: 'sans-serif';*/
+	  border-radius: 5px;
 }
 
 th {
@@ -103,7 +103,7 @@ td:first-child {
 }
 
 tr:hover {
-  background-color: #cbb1d7;
+  background-color: #f9f0ff;
 }
 
 tr.selected {
