--- a/force-app/main/default/layouts/Goal__c-Goal Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Goal__c-Goal Layout.layout-meta.xml
@@ -46,6 +46,14 @@
                 <behavior>Edit</behavior>
                 <field>Navigation_address__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Comments__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>User_Id__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
