--- a/force-app/main/default/lwc/eMS_LM_AllLeaveHistory/eMS_LM_AllLeaveHistory.css
+++ b/force-app/main/default/lwc/eMS_LM_AllLeaveHistory/eMS_LM_AllLeaveHistory.css
@@ -14,8 +14,25 @@
 .table-container {
   max-height: calc(6 * 40px + 40px);
   overflow-y: scroll; /* enable vertical scrollbar */
+  position: relative;
+}
+.table-container::-webkit-scrollbar {
+  width: 10px;
 }
 
+.table-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.table-container::-webkit-scrollbar-thumb {
+  /*background: #888;*/
+  background : rgb(223, 185, 235);
+  border-radius: 4px;
+}
+
+.table-container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 table {
   border-collapse: collapse;
   width: 100%;
@@ -26,6 +43,8 @@ thead {
   position: sticky;
   top: 0;
   z-index: 1; /* set z-index to keep the header on top */
+  backdrop-filter: blur(8px);
+  opacity: 0.95;
 }
 
 th {
@@ -49,7 +68,7 @@ td {
 }
 
 tr:hover {
-  background-color: #cbb1d7;
+  background-color: #f9f0ff;
 }
 
 tr.selected {
