--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory/eMS_LM_LeaveHistory.css
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory/eMS_LM_LeaveHistory.css
@@ -1,5 +1,4 @@
 table {
-  width: 100%;
   margin-bottom: 20px;
   padding-left: 10px;
   padding-right: 10px;
@@ -52,7 +51,7 @@ td {
 
 
 tr:hover {
-  background-color: #cbb1d7;
+  background-color: #f9f0ff;
 }
 
 tr.selected {
