--- a/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.css
+++ b/force-app/main/default/lwc/leaveManagement_Tile/leaveManagement_Tile.css
@@ -1,11 +1,3 @@
-/*.homeCard{
-    background-color: white !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	//box-shadow: 0px 6px rgb(229 229 229);
-    margin-top: 10px;
-    margin-bottom: 20px;
-    font-family: "SalesforceSans-Regular";
-}*/
 .childparent {
     display: flex;
     align-items: center;
@@ -42,6 +34,7 @@
     box-shadow: 0 4px 8px 0 rgba(226, 162, 237, 0.2), 0 6px 20px 0 rgba(216, 170, 238, 0.19);
     margin-top: 20px; /* increased from 10px */
     margin-bottom: 30px; /* increased from 20px */
+    border-radius: 5px;
 }
 
 .text-helpicon-container {
