--- a/force-app/main/default/lwc/resourceCardTile/resourceCardTile.css
+++ b/force-app/main/default/lwc/resourceCardTile/resourceCardTile.css
@@ -31,6 +31,7 @@
     box-shadow: 0 4px 8px 0 rgba(226, 162, 237, 0.2), 0 6px 20px 0 rgba(216, 170, 238, 0.19);
     margin-top: 20px; /* increased from 10px */
     margin-bottom: 30px; /* increased from 20px */
+    border-radius: 5px;
 }
     .header {
         background-color: whitesmoke;
@@ -49,6 +50,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-radius: 15px;
 }
 
 .child1 {
