--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.css
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.css
@@ -4,18 +4,6 @@
    margin-right: 100%;
 }
 
-.changeIconColorView{
-    --lwc-colorTextIconDefault: #e20606;
-}
-
-.changeIconColorEdit{
-    --lwc-colorTextIconDefault: #e20606;
-}
-
-.changeIconColorCancel{
-    --lwc-colorTextIconDefault: #e20606;
-}
-
 .table-container {
   max-height: calc(6 * 40px + 40px);
   overflow-y: scroll; /* enable vertical scrollbar */
@@ -31,6 +19,7 @@ thead {
   position: sticky;
   top: 0;
   z-index: 1; /* set z-index to keep the header on top */
+  backdrop-filter: blur(4px);
 }
 
 th {
@@ -54,7 +43,7 @@ td {
 }
 
 tr:hover {
-  background-color: #cbb1d7;
+  background-color: #f9f0ff;
 }
 
 tr.selected {
